<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.gatech.seclass.sdpcryptogram.AdminAddCryptogramActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Encoded Phrases:"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/encoded_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:lines="@integer/lines_of_cryptogram"
        android:maxLines="@integer/max_lines_of_cryptogram"
        android:maxLength="@integer/length_of_cryptogram"
        android:scrollbars="vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Solution Phrases:"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/solution_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:lines="@integer/lines_of_cryptogram"
        android:maxLines="@integer/max_lines_of_cryptogram"
        android:maxLength="@integer/length_of_cryptogram"
        android:scrollbars="vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Save" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Reset" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cancel" />
    </LinearLayout>

</LinearLayout>