...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Started: "
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/started_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="10"
            android:textSize="18sp"/>

...
            android:textColor="#000000"
            android:textAlignment="center"/>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/available_cryptograms_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
